# advent-of-code

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  utils.py
setup/: download.sh  generate_data.py
solutions/: base.py  template.py
solutions/Y22/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day10.py  day11.py  day12.py  day13.py  day14.py
solutions/Y23/: day01.py  day03.py  day05.py  day07.py  day10.py  day11.py  day12.py  day14.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py
solutions/Y24/: day05.py  day06.py  day07.py
solutions/Y25/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py
solutions/utils/: grid.py  ints.py  range.py
tests/solutions/Y23/: test_day01.py  test_day05.py  test_day07.py  test_day09.py  test_day10.py  test_day12.py  test_day13.py  test_day14.py  test_day18.py  test_day19.py  test_day20.py
tests/solutions/Y24/: test_day02.py
