[project]
name = "aoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.6",
    "numpy>=2.3.5",
    "shapely (>=2.1.2,<3.0.0)",
]

[dependency-groups]
dev = [
    "advent-of-code>=2025.1.0",
    "advent-of-code-data>=2.1.0",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint]
select = ["ALL"]
ignore = [

  # Overly prescriptive
  "ANN401",  # Use of Any type
  "CPY",     # Missing copyright notice at top of file
  "D105",    # Missing docstring in magic method
  "FA102",   # Require from __future__ import annotations for compatibility with python < 3.9
  "FBT",     # Boolean-typed positional arguments
  "SIM108",  # Use ternary operator instead of `if`-`else`-block
  "D100",     # missing-module-docstring
    "D101",  # Missing docstring in public class
    "D102",  #  Missing docstring in public method
  "D103",     #  Missing docstring in public function
    "D104",  # Missing docstring in public package
    "EM101",  # Exception must not use a string literal, assign to variable first
    "TRY003",  # Avoid specifying long messages outside the exception class
    "FIX002",  # Line contains TODO, consider resolving the issue
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link in TODO
    "PLR2004", #  Magic value used in comparison
    "EM102", # Exception must not use an f-string literal

  # conflict with other rules
  "D203",  # 1 blank line required before class docstring
  "D212",  # Multi-line docstring summary should start at the first line

  # conflict with formatter
  "COM812",  # Trailing comma missing
  "E501",    # Line too long ({width} > {limit})
  "ISC001",  # Implicitly concatenated string literals on one line
]
extend-select = [
  "D213",  # Multi-line docstring summary should start at the second line
]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]

"tests/*" = [ # ignore rules in test files
  "D",       # docstrings
  "PLR2004", # magic values
  "S",       # security
]

[tool.mypy]
python_version = "3.13"
strict = true  # Enables all mypy checks
allow_subclassing_any = true  # Not all third-party libraries are type-hinted
ignore_missing_imports = true  # Not all third-party libraries are type-hinted
warn_return_any = false  # Not all third-party libraries are type-hinted
warn_unreachable = true  # Checks for unreachable code, often due to isinstance checks
